# fiRDP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake
macos/: Info.plist
patches/: 0001-add-videotoolbox-hwaccel.patch  0002-fix-progressive-rfx-quant-sub-underflow-guard.patch
src/: display_info.cpp  display_info.hpp  fi_dialog_stubs.cpp  fi_dialogs.cpp  gpu_renderer.cpp  gpu_renderer.hpp  host_keys.cpp  host_keys.hpp  main.cpp  password_store.cpp  password_store.hpp  rdp_connection.cpp  rdp_connection.hpp  rdp_file.cpp  rdp_file.hpp  sdl_config.hpp
